# wesche

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: schedule.json
assets/tests/: schedule.json
src/: main.rs
src/apps/: controller.rs  engine.rs  mod.rs
src/apps/core/: day.rs  mod.rs  schedule.rs  task.rs
src/apps/view/: window.rs
